--- a/public/css/enterpay-company-search-public.css
+++ b/public/css/enterpay-company-search-public.css
@@ -3,9 +3,21 @@
  * included in this file.
  */
  .tt-menu{
-    background-color: aqua;
+    background-color: #fff;
 
  }
  .tt-suggestion{
-    padding: 5px 10px;
+    padding: 6px 6px;
+ }
+ .tt-suggestion:hover{
+   background-color: #0073aa;
+   color: #fff;
+ }
+ .twitter-typeahead{
+   width: 100%;
+ }
+ .tt-menu{
+   width: 100%;
+   top:102%;
+   border: 1px solid #aaa;
  }
