--- a/admin/css/enterpay-company-search-admin.css
+++ b/admin/css/enterpay-company-search-admin.css
@@ -2,3 +2,25 @@
  * All of the CSS for your admin-specific functionality should be
  * included in this file.
  */
+
+.form-table .box_row {
+	float: left;
+	width: 100%;
+	padding: 0 0 5px 0;
+}
+
+.form-table .box_row label {
+	width: 80px;
+	display: inline-block;
+	text-align: right;
+}
+
+.form-table .box_row input {
+	width: 400px;
+	text-align: left;
+	margin: 0;
+}	
+ 
+ .form-table img {
+	 vertical-align: text-bottom;
+ }
