--- a/admin/css/enterpay-company-search-admin.css
+++ b/admin/css/enterpay-company-search-admin.css
@@ -72,12 +72,20 @@
 	width: 350px;
 }
 
-div#field_settings_block .form-table th {	
+div#field_settings_block .form-table th{	
 	padding: 10px 10px 10px 0 !important;
 }
 
 div#field_settings_block .form-table td {
 	padding: 10px 10px 10px 10px !important;
+}
+
+div#mapping_form_block .form-table th{	
+	padding: 0px 10px 0px 0 !important;
+}
+
+div#mapping_form_block .form-table td {
+	padding: 0px 10px 0px 10px !important;
 }
 
 div#field_settings_block h2 {
@@ -90,3 +98,6 @@ div#field_settings_block p.after_field {
 div#field_settings_block p.before_field {
 	margin-bottom: -10px;
 }
+
+
+
