--- a/admin/css/enterpay-company-search-admin.css
+++ b/admin/css/enterpay-company-search-admin.css
@@ -14,6 +14,11 @@
 	display: inline-block;
 	text-align: right;
 }
+.form-table .box_row_mapping label {
+	display: inline-block;
+	text-align: right;
+}
+
 .form-table .box_row label.chb {
 	width: 180px;
 	text-align: left;
@@ -66,3 +71,33 @@
 .form-table .box_row .search_country_container .search_country_item label.chb{
 	width: 350px;
 }
+
+div#field_settings_block .form-table th{	
+	padding: 10px 10px 10px 0 !important;
+}
+
+div#field_settings_block .form-table td {
+	padding: 10px 10px 10px 10px !important;
+}
+
+div#mapping_form_block .form-table th{	
+	padding: 0px 10px 0px 0 !important;
+}
+
+div#mapping_form_block .form-table td {
+	padding: 0px 10px 0px 10px !important;
+}
+
+div#field_settings_block h2 {
+	font-size: 1.6em;
+}
+
+div#field_settings_block p.after_field {
+	margin-top: -10px;
+}
+div#field_settings_block p.before_field {
+	margin-bottom: -10px;
+}
+
+
+
